@@ -21,26 +21,22 @@ import static java.net.HttpURLConnection.HTTP_INTERNAL_ERROR;
 import static java.net.HttpURLConnection.HTTP_OK;
 import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.fail;
 import static org.openqa.selenium.remote.http.Contents.asJson;
 import static org.openqa.selenium.remote.http.HttpMethod.DELETE;
 import static org.openqa.selenium.remote.http.HttpMethod.POST;
 
-import com.google.common.collect.ImmutableMap;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.Callable;
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.TimeoutException;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -86,8 +82,7 @@ class SessionQueueGridTest {
   private static Server<?> createServer(HttpHandler handler) {
     return new NettyServer(
         new BaseServerOptions(
-            new MapConfig(
-                ImmutableMap.of("server", ImmutableMap.of("port", PortProber.findFreePort())))),
+            new MapConfig(Map.of("server", Map.of("port", PortProber.findFreePort())))),
         handler);
   }
 
@@ -157,26 +152,20 @@ class SessionQueueGridTest {
   }
 
   @Test
-  void shouldBeAbleToCreateMultipleSessions() {
-    ImmutableMap<String, String> caps = ImmutableMap.of("browserName", "cheese");
+  void shouldBeAbleToCreateMultipleSessions() throws Exception {
+    Map<String, String> caps = Map.of("browserName", "cheese");
     ExecutorService fixedThreadPoolService = Executors.newFixedThreadPool(2);
     ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor();
 
     try {
       Callable<HttpResponse> sessionCreationTask = () -> createSession(caps);
       List<Future<HttpResponse>> futureList =
-          fixedThreadPoolService.invokeAll(Arrays.asList(sessionCreationTask, sessionCreationTask));
+          fixedThreadPoolService.invokeAll(List.of(sessionCreationTask, sessionCreationTask));
 
       for (Future<HttpResponse> future : futureList) {
         HttpResponse httpResponse = future.get(10, SECONDS);
         assertThat(httpResponse.getStatus()).isEqualTo(HTTP_OK);
       }
-    } catch (InterruptedException e) {
-      fail("Unable to create session. Thread Interrupted");
-    } catch (ExecutionException e) {
-      fail("Unable to create session due to execution exception.");
-    } catch (TimeoutException e) {
-      fail("Unable to create session. Timeout occurred.");
     } finally {
       fixedThreadPoolService.shutdownNow();
       scheduler.shutdownNow();
@@ -186,13 +175,13 @@ class SessionQueueGridTest {
   @Test
   void shouldBeAbleToRejectRequest() {
     // Grid has no slots for the requested capabilities
-    HttpResponse httpResponse = createSession(ImmutableMap.of("browserName", "burger"));
+    HttpResponse httpResponse = createSession(Map.of("browserName", "burger"));
     assertThat(httpResponse.getStatus()).isEqualTo(HTTP_INTERNAL_ERROR);
   }
 
   @Test
-  void shouldBeAbleToClearQueue() {
-    ImmutableMap<String, String> caps = ImmutableMap.of("browserName", "cheese");
+  void shouldBeAbleToClearQueue() throws Exception {
+    Map<String, String> caps = Map.of("browserName", "cheese");
     ExecutorService fixedThreadPoolService = Executors.newFixedThreadPool(1);
     ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor();
 
@@ -226,12 +215,6 @@ class SessionQueueGridTest {
 
       HttpResponse thirdSessionResponse = thirdSessionFuture.get();
       assertThat(thirdSessionResponse.getStatus()).isEqualTo(HTTP_INTERNAL_ERROR);
-    } catch (InterruptedException e) {
-      fail("Unable to create session. Thread Interrupted");
-    } catch (ExecutionException e) {
-      fail("Unable to create session due to execution exception.");
-    } catch (TimeoutException e) {
-      fail("Unable to create session. Timeout occurred.");
     } finally {
       fixedThreadPoolService.shutdownNow();
       scheduler.shutdownNow();
@@ -244,10 +227,9 @@ class SessionQueueGridTest {
     server.stop();
   }
 
-  private HttpResponse createSession(ImmutableMap<String, String> caps) {
+  private HttpResponse createSession(Map<String, String> caps) {
     HttpRequest request = new HttpRequest(POST, "/session");
-    request.setContent(
-        asJson(ImmutableMap.of("capabilities", ImmutableMap.of("alwaysMatch", caps))));
+    request.setContent(asJson(Map.of("capabilities", Map.of("alwaysMatch", caps))));
 
     try (HttpClient client = clientFactory.createClient(server.getUrl())) {
       return client.execute(request);
